<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ads">
        <menu>
            <item
                android:title="@string/my_ads"
                android:id="@+id/id_my_ads"
                />
            <item
                android:title="@string/car"
                android:id="@+id/id_car"
                />
            <item
                android:title="@string/pc"
                android:id="@+id/id_pc"
                />
            <item
                android:title="@string/smartphone"
                android:id="@+id/id_smartphone"
                />
            <item
                android:title="@string/dm"
                android:id="@+id/id_dm"
                />
        </menu>
    </item>
    <item android:title="@string/account">
        <menu>
            <item
                android:title="@string/sign_up"
                android:id="@+id/id_sign_up"
                />
            <item
                android:title="@string/sign_in"
                android:id="@+id/id_sign_in"
                />
            <item
                android:title="@string/sign_out"
                android:id="@+id/id_sign_out"
                />
        </menu>
    </item>
</menu>